Sorted a few header and footer issues

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,10 @@
 <footer class="site-footer">
 
   <div class="wrap">
-
+    <h3 class="site-footer__heading">Contact</h3>
     <div class="footer-col-1 column">
-      <p>Contact</p>
-      <a href="mailto:{{ site.email }}">{{ site.email }}</a>
+
+      <p><a href="mailto:{{ site.email }}">{{ site.email }}</a></p>
 
     </div>
 
