--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,8 @@
 
   <div class="wrap">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <span class="site-title"><a href="{{ site.baseurl }}/">{{ site.title }}</a><span class="site-subtitle">{{ site.subtitle }}</span></span>
+
 
     {% include navigation.html %}
 
